# deep-emotions

./: .gitignore  README.md  conda.yml  pyproject.toml  requirements.txt
conf/base/: catalog.yml  logging.yml
conf/base/parameters/: data_downlaod.yml  data_download.yml
docs/source/: conf.py  index.rst
src/: requirements.txt  setup.py
src/deepemotions/: __init__.py  __main__.py  settings.py
src/deepemotions/pipelines/data_downlaod/: README.md  __init__.py  nodes.py  pipeline.py
src/deepemotions/pipelines/data_download/: README.md  __init__.py  nodes.py  pipeline.py
src/tests/: test_run.py
src/tests/pipelines/data_downlaod/: test_pipeline.py
