[tool.kedro]
package_name = "deepemotions"
project_name = "DeepEmotions"
kedro_init_version = "0.18.5"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/deepemotions -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.poetry]
name = "deepemotions"
version = "0.1.0"
description = ""
authors = ["Martyna Firgolska <mafirgolska@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.24.3"
pandas = "^2.0.1"
kedro-datasets = "^1.3.0"
aiohttp = "^3.8.4"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
